spec/e2e/assignment/invalid_target.lit
"asdf" = 1 # error: [line 1] Error at "=": Invalid assignment target.
println("not ok")
